# test1

./: README.md  pyproject.toml  stats1.csv  stats2.csv
tests/: test_clickbait.py  test_main.py  test_reader.py
youtube_reports/: main.py  reader.py
youtube_reports.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
youtube_reports/reports/: __init__.py  base.py  clickbait.py
